--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "axios": "^1.9.0",
     "expo": "~53.0.8",
     "expo-font": "~13.3.1",
     "expo-status-bar": "~2.2.3",
